<resources>
    <string name="app_name">Family Wallet</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_title">Create an Account</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_title">Sign in Account</string>
    <string name="title_activity_get_info">GetInfo</string>
    <string name="fb_APP_ID">1505482392855831</string>
    <string-array name="spinnerCurrency">
        <item>LKR.</item>
        <item>USD.</item>
        <item>EUR.</item>
        <item>GBP.</item>
        <item>INR.</item>
    </string-array>
    <string name="lkr">LKR.</string>
    <string name="transactionAmount">Amount</string>
    <string name="transactionCategory">Tap to Set Category</string>
    <string name="transactionTitle">Title</string>
    <string name="transactionLocation">Tap to Set Location</string>
    <string name="transactionAccount">Tap to Set Account</string>
    <string name="recurring">Recurring</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="nullAmount">Set the Amount first</string>
    <string name="nullAccount">Select Account first</string>
    <string name="transactionAdded">Transaction Added</string>
    <string name="transactionUpdated">Successfully Updated</string>
    <string name="allTransactions">All family Transactions</string>
    <string name="noConnection">Please switch on your data connection when adding foreign currencies</string>
    <string name="noAccTitle">No account found.</string>
    <string name="noAccMsg">An account is needed to add a transaction. Do you want to add an account?</string>
    <string name="noAccBtnAdd">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="updateTransaction">Update</string>
    <string name="leaveGroup">Leave Group</string>
    <string name="remove">Remove</string>
    <string name="emptyDate">Please Enter the dates first</string>
    <string name="notAvailable">Feature not yet Available</string>
    <string name="addError">Error Occurred, Please Try again</string>
    <string name="loading">Loading....</string>
    <string-array name="Months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="filterList">
        <item>Date</item>
        <item>Category</item>
        <item>Account</item>
        <item>Amount</item>
    </string-array>
    <string name="tAM">AM</string>
    <string name="tPM">PM</string>
    <string name="vhName">Transaction Owner</string>
    <string name="vhTitle">Title</string>
    <string name="vhAmount">Amount</string>
    <string name="vhCategory">Category</string>
    <string name="vhAccount">Account</string>
    <string name="vhDate">Date</string>
    <string name="vhTime">Time</string>
    <string name="vhLocation">Location</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="priceFrom">From</string>
    <string name="priceTo">To</string>
    <string name="totalInc">Total Income</string>
    <string name="totalExp">Total Expense</string>
    <string name="titleEmpty">&lt;Title not Available&gt;</string>
    <string name="listEmpty">No Transactions available</string>
    <string-array name="FilterCategory">
        <item>Car</item>
        <item>Travel</item>
        <item>Food &amp; Drinks</item>
        <item>Transportation</item>
        <item>Gifts</item>
        <item>Bill</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Utilities</item>
        <item>Shopping</item>
        <item>Accommodation</item>
        <item>Healthcare</item>
        <item>Clothing</item>
        <item>Groceries</item>
        <item>Drinks</item>
        <item>Pets</item>
        <item>Education</item>
        <item>Cinema</item>
        <item>Kids</item>
        <item>Loan</item>
        <item>Business</item>
        <item>Salary</item>
        <item>Extra Income</item>
        <item>Other</item>
    </string-array>
    <string-array name="IncomeCategory">
        <item>Car</item>
        <item>Travel</item>
        <item>Food &amp; Drinks</item>
        <item>Transportation</item>
        <item>Gifts</item>
        <item>Bill</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Utilities</item>
        <item>Shopping</item>
        <item>Accommodation</item>
        <item>Healthcare</item>
        <item>Clothing</item>
        <item>Groceries</item>
        <item>Drinks</item>
        <item>Pets</item>
        <item>Education</item>
        <item>Cinema</item>
        <item>Kids</item>
        <item>Other</item>
    </string-array>
    <string-array name="ExpenseCategory">
        <item>Loan</item>
        <item>Business</item>
        <item>Gifts</item>
        <item>Salary</item>
        <item>Extra Income</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinnerRecurring">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <string-array name="spinnerDateFor">
        <item>2001/03/14</item>
        <item>14/03/2001</item>
        <item>March 14,2001</item>
    </string-array>
    <string-array name="Category">
        <item>FOOD</item>
        <item>CAR</item>
        <item>ENTERTAINMENT</item>
        <item>WORK</item>
        <item>ELECTRONICS</item>
        <item>HOME</item>
    </string-array>
    <string-array name="spinnerLanguage">
        <item>Sinhala</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_transaction_main">transaction_main</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_transaction_category">transaction_category</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="splash_rateapi_settitle">Rate this app</string>
    <string name="splash_rateapi_setcancelbtntxt">No, Thanks</string>
    <string name="splash_rateapi_setyesbtntxt">Rate It Now</string>
    <string name="splash_rateapi_setnobtntxt">Remind me later</string>
    <string name="splash_rateapi_setmsg">If you enjoy using this app, would you mind take moment and rate it? Thanks.</string>
    <string name="intropage_onPageSelected_setext">Welcome</string>
    <string name="intropage_onPageSelected_else_setext">Next</string>
    <string name="noticards_onBindViewHolder_snackbar">Notification deleted</string>
    <string name="setting_langbuilder_settitle">Languages</string>
    <string name="setting_currbuilder_settitle">Currency</string>
    <string name="setting_datebuilder_settitle">Date format</string>
    <string name="permitgranted">Permission granted</string>
    <string name="setting_pinbuilder_settitle">Enter PIN</string>
    <string name="setting_pinbuilder_negbtn">Cancel</string>
    <string name="setting_reminderbuilder_settitle">Set reminder</string>
    <string name="settings_feedbackmail_elsetoast">There are no email clients.</string>
    <string name="addmember_title">Add member</string>
    <string name="dashboard_animatemenu_setcontitle">Dashboard Help</string>
    <string name="dashboard_animatemenu_setcontext">Use this help menu to view the usages of the keys in the app.</string>
    <string name="dashboard_onclick_0_setcontitle">Navigation Drawer</string>
    <string name="dashboard_onclick_0_setconttext">This contains all the sub systems in the app.</string>
    <string name="dashboard_onclick_1_setcontitle">Notification Badge</string>
    <string name="dashboard_onclick_1_setconttext">Unseen notification count is displayed here.</string>
    <string name="dashboard_onclick_2_setcontitle">Search Bar</string>
    <string name="dashboard_onclick_2_setconttext">Used to search transactions using entered keyword</string>
    <string name="dashboard_onclick_3_setcontitle">Add transaction</string>
    <string name="dashboard_onclick_3_setconttext">User can add new income or expenses from here</string>
    <string name="dashboard_onclick_3_setbtntext">Close</string>
    <string name="forgot_oncomplete_toast">Reset link send to your mail</string>
    <string name="forgot_emailerr">Invalid email</string>
    <string name="getinfo_title">Enter details</string>
    <string name="getinfo_cameraopt_settitle">Select Option</string>
    <string name="getinfo_cameraopt1">Take a Photo</string>
    <string name="getinfo_cameraopt2">Select from Gallery</string>
    <string name="getinfo_lastname_errmsg">Invalid last name</string>
    <string name="getinfo_firstname_errmsg">Invalid first name</string>
    <string name="getinfo_uploadimage_progressdig_settitle">Setting up..</string>
    <string name="getinfo_uploadimage_progressdig_setmsg">% Uploaded..</string>
    <string name="signup_onclick_passerr">Invalid password</string>
    <string name="signup_onclick_emailerr">Invalid email</string>
    <string name="signup_onclickprogressbar_msg">Registering user</string>
    <string name="signup_oncomplete_sucesstoast">Registration successful</string>
    <string name="signup_cancel_toast">You cancelled</string>
    <string name="xmlsignup_emailTxt_hint">Email address</string>
    <string name="xmlsignup_passwordTxt_hint">Password</string>
    <string name="xmlsignin_textView_text">Forgot?</string>
    <string name="xmlsignin_textView2_text">Not a member?</string>
    <string name="xmlsignin_signInBtn_text">Sign in via Email</string>
    <string name="xmlexportdata_filename_hint">Backup Filename</string>
    <string name="xmlexportdata_csvCheck_text">CSV Format</string>
    <string name="xmlexportdata_exelCheck_text">Excel Format</string>
    <string name="xmlexportdata_sendBackMail_text">Send Files via Mail?</string>
    <string name="xmlexportdata_createBtn_text">Export Recurring Transactions</string>
    <string name="xmlmenu_reportsFrag_title">Reports</string>
    <string name="xmlmenu_item3_title">Utilities</string>
    <string name="xmlmenu_backupFrag_title">Backup</string>
    <string name="xmlmenu_helpFrag_title">Help and Manual</string>
    <string name="xmlmenu_settingFrag_title">Settings</string>
    <string name="xmlmenu_walletFrag_title">Wallet</string>
    <string name="xmlmenu_budgetFrag_title">Budgets</string>
    <string name="dashboard_settitle_overview">My Transactions</string>
    <string name="dashboard_settitle_recurring">Recurring Transactions</string>
    <string name="dashboard_settitle_family">Family Transactions</string>
    <string name="xmlsignin_fbOptBtn_text">Sign in via Facebook</string>
    <string name="xmlsignin_noSignInBtn_text">Continue Without Signing in</string>
    <string name="xmlmenu_item1_title">Transactions</string>
    <string name="xmlmenu_item4_title">Preferences</string>
    <string name="xmlmenu_updateFrag_title">Update User</string>
    <string name="xmlmenu_signOutFrag_title">Sign out</string>
    <string name="xmlmenu_addMemberFrag_title">Add Member</string>
    <string name="xmlmenu_item5_title">Users</string>
    <string name="xmlexportdata_createBtn2_text">Export Genaral Transactions</string>
    <string name="change_password">Change Password</string>
    <string name="xmlchange_conf_passwordTxt_hint">Confirm Password</string>
</resources>