<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navTransaction"
        android:title="@string/xmlmenu_item1_title">
        <menu>
            <item
                android:id="@+id/transactionFrag"
                android:icon="@mipmap/user"
                android:title="@string/dashboard_settitle_overview" />
            <item
                android:id="@+id/categoryFrag"
                android:icon="@mipmap/family"
                android:title="@string/dashboard_settitle_family" />

            <item
                android:id="@+id/recurringFrag"
                android:icon="@mipmap/recurring"
                android:title="@string/dashboard_settitle_recurring" />

        </menu>
    </item>


    <item
        android:id="@+id/navUtilities"
        android:title="@string/xmlmenu_item3_title">
        <menu>

            <item
                android:id="@+id/budgetFrag"
                android:icon="@mipmap/budgets"
                android:title="@string/xmlmenu_budgetFrag_title" />

            <item
                android:id="@+id/walletFrag"
                android:icon="@mipmap/wallet"
                android:title="@string/xmlmenu_walletFrag_title" />

            <item
                android:id="@+id/backupFrag"
                android:icon="@mipmap/backup"
                android:title="@string/xmlmenu_backupFrag_title" />

            <item
                android:id="@+id/reportsFrag"
                android:icon="@mipmap/reports"
                android:title="@string/xmlmenu_reportsFrag_title" />


        </menu>
    </item>


    <item
        android:id="@+id/navPreferences"
        android:title="@string/xmlmenu_item4_title">
        <menu>


            <item
                android:id="@+id/settingFrag"
                android:icon="@mipmap/settings"
                android:title="@string/xmlmenu_settingFrag_title" />


            <item
                android:id="@+id/helpFrag"
                android:icon="@mipmap/help"
                android:title="@string/xmlmenu_helpFrag_title" />
        </menu>
    </item>

    <item
        android:id="@+id/navUsers"
        android:title="@string/xmlmenu_item5_title">
        <menu>


            <item
                android:id="@+id/updateFrag"
                android:icon="@mipmap/update_user"
                android:title="@string/xmlmenu_updateFrag_title" />


            <item
                android:id="@+id/addMemberFrag"
                android:icon="@mipmap/add_member"
                android:title="@string/xmlmenu_addMemberFrag_title" />

            <item
                android:id="@+id/signOutFrag"
                android:icon="@mipmap/sign_out"
                android:title="@string/xmlmenu_signOutFrag_title" />


        </menu>
    </item>



</menu>
