<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:id="@+id/a"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
    >

        <EditText
                android:hint="@string/xmlexportdata_filename_hint"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentTop="true"

                android:inputType="textEmailAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filename"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
            android:text="@string/xmlexportdata_csvCheck_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/a"

            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/csvCheck"/>
    <CheckBox
            android:text="@string/xmlexportdata_exelCheck_text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/csvCheck"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/exelCheck" />

    <Switch
            android:text="@string/xmlexportdata_sendBackMail_text"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:layout_below="@+id/exelCheck"

            android:layout_width="match_parent"
            android:layout_marginTop="20dp"

            android:layout_height="wrap_content" android:id="@+id/sendBackMail"/>

    <Button
            android:text="@string/xmlexportdata_createBtn2_text"
            android:textAllCaps="false"
            android:layout_marginBottom="100dp"
            android:background="@drawable/roundbutton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content" android:id="@+id/createBtn2"/>

    <Button
            android:text="@string/xmlexportdata_createBtn_text"
            android:textAllCaps="false"
            android:layout_marginBottom="40dp"
            android:background="@drawable/roundbutton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/createBtn"/>


</RelativeLayout>