<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/lib/ccpe001.familywallet"
              xmlns:facebook="http://schemas.android.com/apk/res-auto"
              android:focusable="true"

              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
    >
        <EditText
                android:hint="@string/xmlsignup_emailTxt_hint"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="15dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/emailTxt" android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            app:passwordToggleDrawable="@mipmap/xhdpi"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnable="true">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent">


        <EditText
                android:hint="@string/xmlsignup_passwordTxt_hint"
                android:drawableStart="@mipmap/password"
                android:drawablePadding="15dp"
                android:inputType="textPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordTxt"
                android:maxLines="1"/>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:text="@string/xmlsignin_textView_text"
                android:textAlignment="textEnd" />

        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/xmlsignin_textView2_text"
        android:textAlignment="center" />

    <Button
        android:id="@+id/signInBtn"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@mipmap/email2"
        android:gravity="center_vertical"
        android:text="@string/xmlsignin_signInBtn_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleOptBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/fbOptBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        facebook:login_text="@string/xmlsignin_fbOptBtn_text" />


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom">


        <TextView
            android:id="@+id/noSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:text="@string/xmlsignin_noSignInBtn_text"
            android:textAlignment="center"
            android:textAllCaps="false" />

    </RelativeLayout>







</LinearLayout>