<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:scaleType="center"
                android:id="@+id/bgBVw"
                android:background="#FFFFBB33"
                android:contentDescription="@string/app_name">
        </ImageView>

        <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="13dp"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/change_password"
                android:layout_centerHorizontal="true" />

        <ImageView android:layout_width="50dp"
                   android:src="@mipmap/icons8_info"
                   android:layout_height="50dp"
                   android:layout_margin="5dp"
                   android:layout_alignParentRight="true"
                   android:id="@+id/iconvVw"
        />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
            app:passwordToggleDrawable="@mipmap/xhdpi"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            >
        <EditText
                android:hint="@string/xmlsignup_passwordTxt_hint"
                android:inputType="textPassword"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/passwordTxt1" android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            app:passwordToggleDrawable="@mipmap/xhdpi"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
        <EditText
                android:hint="@string/xmlchange_conf_passwordTxt_hint"
                android:inputType="textPassword"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/passwordTxt2" android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>