<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/lib/ccpe001.familywallet"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <ImageView
            android:src="@drawable/welcome_screen"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name" />

    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
    >

    <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:maxLines="1"
            android:layout_marginBottom="4dp"
            android:hint="@string/xmlsignup_emailTxt_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            app:passwordToggleEnable="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
    >
    <EditText
            android:id="@+id/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/xmlsignup_passwordTxt_hint"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>