<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <DatePicker
        android:id="@+id/datePicker3"
        android:layout_width="wrap_content"
        android:layout_height="353dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="0.53"
            android:gravity="center"
            android:text="@string/startDate" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:gravity="center"
            android:text="@string/endDate" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:text="@string/submit" />

</LinearLayout>